corrected error messages

--- a/views/customer/view.ejs
+++ b/views/customer/view.ejs
@@ -1,7 +1,9 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-  <h1 class="h2"><%= user.username %></h1>
+  <h1 class="h2">
+    <%= user.username %>
+  </h1>
   <div class="btn-toolbar mb-2 mb-md-0">
-    
+
   </div>
 </div>
 
@@ -11,35 +13,44 @@
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="/admin/dashboard">Dashboard</a></li>
-          <li class="breadcrumb-item active"><%= user.username %></li>
+          <li class="breadcrumb-item active">
+            <%= user.username %>
+          </li>
         </ol>
       </nav>
     </div>
     <div class="col text-end fw-lighter">
-      <b>UserId:</b> <%= user._id %>
+      <b>UserId:</b>
+      <%= user._id %>
     </div>
   </div>
 </div>
 
 <ul class="list-group">
-  <li class="list-group-item"> 
+  <li class="list-group-item">
     <div class="row">
       <div class="col" style="max-width: 140px"><b>Username:</b></div>
-      <div class="col"><%= user.username %></div>
+      <div class="col">
+        <%= user.username %>
+      </div>
     </div>
   </li>
 
-  <li class="list-group-item"> 
+  <li class="list-group-item">
     <div class="row">
       <div class="col" style="max-width: 140px"><b>Email:</b></div>
-      <div class="col"><%= user.email %></div>
+      <div class="col">
+        <%= user.email %>
+      </div>
     </div>
   </li>
 
-  <li class="list-group-item"> 
+  <li class="list-group-item">
     <div class="row">
       <div class="col" style="max-width: 140px"><b>Password:</b></div>
-      <div class="col"><%= user.password %></div>
+      <div class="col">
+        <%= user.password %>
+      </div>
     </div>
   </li>
 </ul>
